# multiplayer-3d-game

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  backup.mk  client.cpp  cmake.mk  main.cpp  server.cpp  windres.c
assets/: beryl.blend  map_mntns.blend  robot.blend
assets/shaders/: basic.fs  inv.fs  inv.vs
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
math/: _mat4.hpp  mat4.hpp  math.hpp  vec4.hpp
src/: _stb.cpp  app.cpp  app.hpp  camera.hpp  ccapi.hpp  icon.rc  main.cpp  transform.hpp
src/audio/: audio.cpp  audio.hpp  audiodata.hpp
src/common/: ccapi.hpp
src/common/math/: _mat4.hpp  _vec4.hpp  math.hpp  vec2.hpp
src/common/sus/: README.md  client.hpp  event.hpp  internal.hpp  server.hpp
src/game/: _stb.cpp  app.cpp  app.hpp  camera.hpp  main.cpp  transform.hpp
src/game/audio/: audio.cpp  audio.hpp  audiodata.hpp  loaderWAV.hpp
src/game/rendering/: camera.hpp  foreach.hpp  loaderOBJ.hpp  mesh.cpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/math/: math.hpp  vec3.hpp  vec4.hpp
src/networking/: networking.hpp
src/rendering/: camera.hpp  loaderOBJ.hpp  material.hpp  mesh.cpp  mesh.hpp
src/server/: main.cpp
src/sus/: client.hpp  internal.hpp  networking.hpp  server.hpp
